<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_margin="10sp"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/loginButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100sp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:layout_margin="10sp"
            android:textColor="@color/white"
            android:text="@string/searchFlight"/>
        <Button
            android:id="@+id/btnReserveSeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:layout_margin="10sp"
            android:textColor="@color/white"
            android:text="@string/reserveSeat"/>
        <Button
            android:id="@+id/btnAmenities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:layout_margin="10sp"
            android:textColor="@color/white"
            android:text="@string/amenities"/>
        <Button
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:layout_margin="10sp"
            android:textColor="@color/white"
            android:text="@string/about"/>

    </LinearLayout>

</LinearLayout>